--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     }
   ],
   "require": {
-    "swp/storage": "^1.4"
+    "php": "^7.1",
+    "swp/common": "^1.4"
   },
   "require-dev": {
     "phpspec/phpspec": "^3.0"
