Fix Paywall component name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "swp/Paywall",
+  "name": "swp/paywall",
   "description": "Paywall component",
   "type": "library",
   "license": "AGPL-3.0",
