--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "require": {
     "php": "^7.1",
-    "swp/common": "^1.4"
+    "swp/common": "^1.4|^2.0"
   },
   "require-dev": {
     "phpspec/phpspec": "^3.0"
