--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     }
   ],
   "require": {
-    "php": "^7.1",
-    "swp/common": "^1.4|^2.0"
+    "php": "^7.3",
+    "swp/common": "^2.0"
   },
   "require-dev": {
     "phpspec/phpspec": "^3.0"
